fix(web): fix TOI chart overflow on mobile

--- a/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
+++ b/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
@@ -14,6 +14,11 @@
       top: 25%;
       transform: translate(-50%, -25%);
     }
+    @media only screen and (max-width: $screen-medium-max) {
+      canvas {
+        width: 100% !important;
+      }
+    }
   }
   // target two option groups
   .allOptions {
